# libcurl-wrapper

./: CMakeLists.txt  curlasynctransfer.cpp  curlholder.cpp  curlhttptransfer.cpp  curlmultiasync.cpp  curlurl.cpp  traceconfiguration.cpp  tracefile.cpp  urlutils.cpp
include/libcurl-wrapper/: curlasynctransfer.hpp  curlholder.hpp  curlhttptransfer.hpp  curlmultiasync.hpp  curlurl.hpp  traceconfiguration.hpp  tracefile.hpp  tracing.hpp  urlutils.hpp
tests/: CMakeLists.txt  curlasynctransfer_tests.cpp  curlhttptransfer_tests.cpp  curlmultiasync_tests.cpp  curlurl_tests.cpp  urlutils_tests.cpp
